--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "discord.js": "^11.5.1",
     "ffmpeg-static": "^2.5.0",
     "node-fetch": "^2.6.0",
-    "opusscript": "0.0.6",
-    "youtube-node": "^1.3.3",
+    "opusscript": "^0.0.6",
+    "youtube-api": "^2.0.10",
     "ytdl-core": "^0.29.2"
   }
 }
